--- a/cek_loc/templates/cek_loc/home.html
+++ b/cek_loc/templates/cek_loc/home.html
@@ -71,7 +71,7 @@
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="{{image}}" alt="..."  width="100" height="200" />
+                            <img class="card-img-top" src="{{image}}" alt="..."   />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
