--- a/pizza/templates/pizza/order.html
+++ b/pizza/templates/pizza/order.html
@@ -2,9 +2,21 @@
 
 <!-- template dari views.py/order -->
 <h2>{{ note }}</h2>
+{% if created_pizza_pk %}
+<a href="{% url  'edit_order' created_pizza_pk %}">Edit Your Order</a>
+{% endif %}
 
 <form action="{% url 'order' %}" method="post">
     {% csrf_token %}
     {{ pizzaform }}
     <input type="submit" value="Order Pizza">
+</form>
+
+<br><br>
+
+want more than one pizzza?
+
+<form action="{% url 'pizzas' %}" method="get">
+    {{ multiple_form }}
+    <input type="submit" value="Get Pizzas">
 </form>
